--- a/.github/workflows/daily-specs.yml
+++ b/.github/workflows/daily-specs.yml
@@ -1,6 +1,7 @@
 ---
 # yamllint disable rule:truthy rule:line-length
 name: daily-specs
+# Network access to scanner.tradingview.com is required for tvgen build
 
 on:
   schedule:
@@ -8,7 +9,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
   pull-requests: write
 
 jobs:
@@ -22,6 +23,13 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
+      - name: Cache Poetry dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
       - name: Install tools
         run: |
           python -m pip install --upgrade pip
@@ -30,10 +38,16 @@ jobs:
         run: |
           poetry install --no-interaction --no-root
       - name: Debug tvgen installation
+        # Verify tvgen CLI can run before invoking it in subsequent steps
         run: |
           poetry run tvgen --help || echo "tvgen is not installed or not in PATH"
       - name: Build specs
-        run: poetry run tvgen build --indir results --outdir specs
+        # Retry to handle temporary network issues when contacting TradingView
+        run: |
+          for i in {1..3}; do
+            poetry run tvgen build --indir results --outdir specs && break
+            sleep 10
+          done
       - name: Validate generated specs
         run: |
           for spec in specs/*.yaml; do
@@ -42,7 +56,7 @@ jobs:
       - name: Check size limit
         run: |
           for spec in specs/*.yaml; do
-            python -c "import os,sys; s=os.path.getsize('$spec'); assert s<1048576"
+            python -c "import os,sys; s=os.path.getsize('$spec'); assert s<1048576, 'Spec size exceeds 1MB!'"
           done
       - name: Commit and create PR if spec changed
         env:
