--- a/.github/workflows/daily-specs.yml
+++ b/.github/workflows/daily-specs.yml
@@ -8,14 +8,11 @@ on:
     - cron: '0 3 * * *'
   workflow_dispatch:
 
-permissions:
-  contents: read
-  pull-requests: write
-
 jobs:
   build:
     permissions:
       contents: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -50,36 +47,26 @@ jobs:
           done
       - name: Validate generated specs
         run: |
+          shopt -s nullglob
           for spec in specs/*.yaml; do
             openapi-spec-validator "$spec"
           done
       - name: Check size limit
         run: |
+          shopt -s nullglob
           for spec in specs/*.yaml; do
             python -c "import os,sys; s=os.path.getsize('$spec'); assert s<1048576, 'Spec size exceeds 1MB!'"
           done
-      - name: Commit and create PR if spec changed
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git config user.name "github-actions[bot]"
-          if git diff --quiet HEAD -- specs/*.yaml; then
-            echo "No changes detected"
-            exit 0
-          fi
-          branch="specs-${{ github.run_number }}"
-          git checkout -b "$branch"
-          git add results/** specs/*.yaml
-          git commit -m 'chore: update specs'
-          git push origin "$branch"
-          python - <<'PY'
-          from codex_actions import create_pull_request
-
-          create_pull_request(
-              title="Update OpenAPI specs",
-              body="Спецификация обновлена автоматически на основе новых данных с TradingView /metainfo",
-          )
-          PY
+      - name: Create pull request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: 'chore: update specs'
+          branch: specs-${{ github.run_number }}
+          title: Update OpenAPI specs
+          body: "Спецификация обновлена автоматически на основе новых данных с TradingView /metainfo"
+          add-paths: |
+            results/**
+            specs/*.yaml
       - name: Finish
         run: exit 0
