--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,14 +27,19 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install black flake8 mypy pytest pytest-cov openapi-spec-validator requests_mock \
-            types-requests types-PyYAML types-toml -r requirements.txt
-          pip install -e .
-      - name: Format
-        run: black --check .
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install black flake8 mypy pytest pytest-cov openapi-spec-validator requests_mock \
+              types-requests types-PyYAML types-toml -r requirements.txt
+            pip install -e .
+        - name: Validate repository specs
+          run: |
+            if ls specs/*.yaml 1> /dev/null 2>&1; then
+              openapi-spec-validator specs/*.yaml
+            fi
+        - name: Format
+          run: black --check .
       - name: Lint
         run: flake8 .
       - name: Type check
