--- a/specs/crypto.yaml
+++ b/specs/crypto.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 x-oai-custom-action-schema-version: v1
 info:
   title: Unofficial TradingView Crypto API
-  version: 1.0.39
+  version: 1.0.40
 servers:
   - url: https://scanner.tradingview.com
 paths:
@@ -98,6 +98,35 @@ paths:
           description: Bad Request
         '500':
           description: Server Error
+  /crypto/numeric:
+    get:
+      summary: Get numeric field for crypto
+      operationId: CryptoNumeric
+      x-openai-isConsequential: false
+      parameters:
+        - name: symbol
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: field
+          in: query
+          required: true
+          schema:
+            oneOf:
+              - $ref: '#/components/schemas/NumericFieldWithTimeframe'
+              - $ref: '#/components/schemas/NumericFieldNoTimeframe'
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Num'
+        '400':
+          description: Bad Request
+        '500':
+          description: Server Error
   /crypto/metainfo:
     post:
       summary: Get crypto metainfo
@@ -135,7 +164,8 @@ components:
         - close
     NumericFieldWithTimeframe:
       type: string
-      pattern: ^[A-Z0-9_+\[\]]+\|(1|5|15|30|60|120|240|1D|1W)$
+      enum: []
+      pattern: ^[A-Za-z0-9_.\[\]]+\|(1|5|15|30|60|120|240|1D|1W)$
     CryptoFields:
       type: object
       properties:
