--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,18 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tv-generator"
-version = "1.0.48"
+version = "1.0.49"
 requires-python = ">=3.10"
-dependencies = [ "click>=8.2", "requests>=2.32", "pandas>=2.3", "PyYAML>=6.0", "openapi-spec-validator>=0.7", "toml>=0.10", "requests_cache>=1.2", "pydantic>=2.7",]
+dependencies = [
+  "click==8.2.1",
+  "requests==2.32.4",
+  "pandas==2.3.0",
+  "PyYAML==6.0.2",
+  "openapi-spec-validator==0.7.2",
+  "toml==0.10.2",
+  "requests_cache==1.2.1",
+  "pydantic==2.11.7",
+]
 
 [project.scripts]
 tvgen = "src.cli:cli"
