--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-requests>=2.32
-pandas>=2.3
-PyYAML>=6.0
-openapi-spec-validator>=0.7
-requests_mock
-click>=8.2
-toml>=0.10
-requests_cache>=1.2
-pydantic>=2.7
-types-requests
-types-PyYAML
-types-toml
-pytest
-black
-flake8
+requests==2.32.4
+pandas==2.3.0
+PyYAML==6.0.2
+openapi-spec-validator==0.7.2
+requests_mock==1.12.1
+click==8.2.1
+toml==0.10.2
+requests_cache==1.2.1
+pydantic==2.11.7
+types-requests==2.32.4.20250611
+types-PyYAML==6.0.12.20250516
+types-toml==0.10.8.20240310
+pytest==8.4.0
+black==25.1.0
+flake8==7.2.0
