--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
-            pip install black flake8 mypy pytest pytest-cov openapi-spec-validator requests_mock \
+            pip install black flake8 mypy pytest coverage openapi-spec-validator requests_mock \
               types-requests types-PyYAML types-toml -r requirements.txt
             pip install -e .
         - name: Validate repository specs
@@ -45,7 +45,10 @@ jobs:
       - name: Type check
         run: mypy --strict src/
       - name: Test with coverage
-        run: pytest --cov=src --cov-report=xml --cov-fail-under=95 -q
+        run: |
+          coverage run -m pytest -q
+          coverage xml
+          coverage report
         timeout-minutes: 10
       - name: Upload coverage to Codecov
         if: ${{ secrets.CODECOV_TOKEN && always() }}
