--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tv-generator"
-version = "1.0.49"
+version = "1.0.50"
 requires-python = ">=3.10"
 dependencies = [
   "click==8.2.1",
@@ -21,7 +21,7 @@ dependencies = [
 tvgen = "src.cli:cli"
 
 [tool.setuptools]
-packages = [ "src", "src.api", "src.generator", "src.utils", "src.constants", "src.spec", "src.data",]
+packages = [ "src", "src.api", "src.generator", "src.utils", "src.spec", "src.data",]
 
 [tool.mypy]
 ignore_missing_imports = true
