--- a/.github/workflows/spec-update.yml
+++ b/.github/workflows/spec-update.yml
@@ -21,7 +21,7 @@ jobs:
       SERVER_URL: ${{ secrets.SERVER_URL }}
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ['3.10']
     steps:
       - uses: actions/checkout@v4
         with:
@@ -105,7 +105,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11", "3.12"]
+        python-version: ['3.10']
     steps:
       - name: Checkout
         uses: actions/checkout@v4
