--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
-            pip install black flake8 mypy pytest coverage openapi-spec-validator requests_mock \
+            pip install black flake8 mypy pytest coverage openapi-spec-validator bandit safety requests_mock \
               types-requests types-PyYAML types-toml -r requirements.txt
             pip install -e .
         - name: Validate repository specs
@@ -38,8 +38,12 @@ jobs:
             if ls specs/*.yaml 1> /dev/null 2>&1; then
               openapi-spec-validator specs/*.yaml
             fi
-        - name: Format
-          run: black --check .
+      - name: Format
+        run: black --check .
+      - name: Security - Bandit
+        run: bandit -q -r src
+      - name: Security - Safety
+        run: safety check -r requirements.txt -r requirements-dev.txt
       - name: Lint
         run: flake8 src tests
       - name: Type check
@@ -122,7 +126,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest -r requirements.txt
+          pip install flake8 pytest bandit safety -r requirements.txt
           pip install -e .
       - name: Lint
         run: flake8 src tests
