--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,3 +14,12 @@ repos:
     rev: v1.9.0
     hooks:
       - id: mypy
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.8
+    hooks:
+      - id: bandit
+        args: [-q, -r, src]
+  - repo: https://github.com/pycqa/safety
+    rev: 3.2.0
+    hooks:
+      - id: safety
